--- a/demo/Settings.json
+++ b/demo/Settings.json
@@ -1,14 +1,16 @@
 {
   "name": "Example demo project for JSON",
+  "version": "1.0",
   "pollingIntervalMinutes": 15,
   "lifecycle": "ContinuousLoop",
   "order": "Sequential",
   "actions": [
     {
       "$type": "KioskLibrary.Actions.ImageAction, KioskLibrary",
-      "path": "https://raw.githubusercontent.com/CityOfStanton/Kiosk-Client/develop/logo/Kiosk-Client_GitHub%20Social%20Preview.png",
+      "path": "https://raw.githubusercontent.com/CityOfStanton/Kiosk-Client/main/logo/Kiosk-Client_GitHub%20Social%20Preview.png",
       "stretch": "Uniform",
       "name": "Show the Kiosk Client Social Share image from GitHub",
+      "version": "1.0",
       "duration": 5
     },
     {
@@ -19,6 +21,7 @@
       "scrollingResetDelay": 5,
       "settingsDisplayTime": 5,
       "name": "Display the Kiosk Client GitHub page",
+      "version": "1.0",
       "duration": 20
     }
   ]
