--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -130,7 +130,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Converters\BooleanToInvertedVisibilityConverter.cs" />
+    <Compile Include="Converters\HideFileOrchestrationSourceConverter.cs" />
+    <Compile Include="Converters\NullToVisibilityConverter.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Converters\BooleanToSymbolConverter.cs" />
+    <Compile Include="Converters\BooleanToColorConverter.cs" />
     <Compile Include="Dialogs\RunTutorial.xaml.cs">
       <DependentUpon>RunTutorial.xaml</DependentUpon>
     </Compile>
@@ -154,7 +158,7 @@
     <Compile Include="Dialogs\Examples.xaml.cs">
       <DependentUpon>Examples.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\Support\PagesHelper.cs" />
+    <Compile Include="Pages\PageArguments\ActionPageArguments.cs" />
     <Compile Include="Pages\PageArguments\SettingsPageArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\Settings.xaml.cs">
@@ -287,6 +291,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Humanizer.Core">
+      <Version>2.8.26</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AppCenter">
       <Version>4.1.0</Version>
     </PackageReference>
