--- a/src/KioskLibrary/KioskLibrary.csproj
+++ b/src/KioskLibrary/KioskLibrary.csproj
@@ -125,19 +125,20 @@
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
     <Compile Include="Common\Constants.cs" />
+    <Compile Include="Common\ValidationResult.cs" />
     <Compile Include="Common\OrchestrationSource.cs" />
     <Compile Include="Helpers\HttpHelper.cs" />
     <Compile Include="Helpers\IHttpHelper.cs" />
     <Compile Include="Helpers\ITimeHelper.cs" />
     <Compile Include="Helpers\SerializationHelper.cs" />
     <Compile Include="Helpers\TimerHelper.cs" />
-    <Compile Include="Orchestration\LifecycleBehavior.cs" />
+    <Compile Include="Orchestrations\LifecycleBehavior.cs" />
     <Compile Include="Common\Ordering.cs" />
-    <Compile Include="Orchestration\OrchestrationInstance.cs" />
+    <Compile Include="Orchestrations\Orchestration.cs" />
     <Compile Include="Actions\ImageAction.cs" />
     <Compile Include="Actions\WebsiteAction.cs" />
     <Compile Include="IsExternalInit.cs" />
-    <Compile Include="Orchestration\Orchestrator.cs" />
+    <Compile Include="Orchestrations\Orchestrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\ApplicationStorage.cs" />
     <Compile Include="Storage\IApplicationStorage.cs" />
