--- a/test/Unit/KioskLibrary.Spec/KioskLibrary.Spec.csproj
+++ b/test/Unit/KioskLibrary.Spec/KioskLibrary.Spec.csproj
@@ -121,8 +121,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\WebsiteActionSpec.cs" />
-    <Compile Include="Orchestration\OrchestrationInstanceSpec.cs" />
-    <Compile Include="Orchestration\OrchestratorSpec.cs" />
+    <Compile Include="Orchestrations\OrchestrationSpec.cs" />
+    <Compile Include="Orchestrations\OrchestratorSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
