--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,7 +91,8 @@ steps:
     configuration: '$(testConfiguration)'
     clean: false
     msbuildArgs: '/m:1
-                  /p:platform=x64 /p:platform=x86
+                  /p:platform=x64
+                  /p:platform=x86
                   /p:AppxBundlePlatforms="x86"
                   /Fileloggerparameters:verbosity=quiet
                   /Consoleloggerparameters:verbosity=minimal
@@ -126,7 +127,9 @@ steps:
     configuration: '$(buildConfiguration)'
     clean: false
     msbuildArgs: '/m:1
-                  /p:platform=x64 /p:platform=x86  /p:platform=arm
+                  /p:platform=x64
+                  /p:platform=x86
+                  /p:platform=arm
                   /Fileloggerparameters:verbosity=quiet
                   /Consoleloggerparameters:verbosity=minimal
                   /p:AppxPackageDir="$(appxPackageDir)"
