Added another AP exception

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ pr:
       - '**/*.ai'
       - 'logo/*.png'
       - 'azure-pipelines.yml'
+      - '.vscode/*'
 
 pool:
   vmImage: 'windows-latest'
