Added VSCode settings (#63)
* Added VSCode settings

* Added AP exception

* Added another AP exception

---------

Co-authored-by: Chad Birch <chad.birch@lexmark.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ trigger:
       - '**/*.ai'
       - 'logo/*.png'
       - 'azure-pipelines.yml'
+      - '.vscode/*'
 
 pr:
   branches:
@@ -33,6 +34,7 @@ pr:
       - '**/*.ai'
       - 'logo/*.png'
       - 'azure-pipelines.yml'
+      - '.vscode/*'
 
 pool:
   vmImage: 'windows-latest'
