Refactor project to use Microsoft.UI.Xaml namespaces and update project files to .NET SDK style
- Updated XAML and C# files to replace Windows.UI.Xaml with Microsoft.UI.Xaml namespaces.
- Converted project files for KioskLibrary.Spec and OrchestrationPollingManager.Spec to .NET SDK style, removing legacy UWP configurations.
- Added necessary package references for MSTest and XML document handling.
- Cleaned up unnecessary properties and configurations in project files.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
- <PropertyGroup>
-   <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
- </PropertyGroup>
+  <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+    <RuntimeIdentifiers>win-x64;win-arm64;win-x86</RuntimeIdentifiers>
+  </PropertyGroup>
 </Project>
