--- a/src/OrchestrationPollingManager/OrchestrationPollingManager.csproj
+++ b/src/OrchestrationPollingManager/OrchestrationPollingManager.csproj
@@ -128,13 +128,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.11</Version>
+      <Version>6.2.14</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="Serilog">
-      <Version>2.10.0</Version>
+      <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Exceptions">
-      <Version>6.0.0</Version>
+      <Version>8.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Private.Uri">
+      <Version>4.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.RegularExpressions">
+      <Version>4.3.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
