Implement URL history management in Settings page, including loading and saving URL history. Add AutoRetryActiveToSymbolConverter for UI representation of auto-retry state. Update SettingsViewModel to manage auto-retry settings and countdown. Refactor Settings page XAML to include auto-retry controls and improve layout. Fix various code issues and improve overall functionality.

--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -129,6 +129,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Converters\AutoRetryActiveToSymbolConverter.cs" />
     <Compile Include="Converters\BooleanToInvertedVisibilityConverter.cs" />
     <Compile Include="Converters\HideFileOrchestrationSourceConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
@@ -291,6 +292,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Uwp.Controls.SettingsControls">
+      <Version>8.2.250402</Version>
+    </PackageReference>
     <PackageReference Include="Humanizer.Core">
       <Version>2.14.1</Version>
     </PackageReference>
