Add CountToColorConverter and enhance Settings page navigation
- Introduced CountToColorConverter for dynamic color representation based on count values.
- Updated SettingsPageArguments to include SelectedSettingPageTabs for improved navigation.
- Enhanced MainPage.xaml.cs to handle orchestration failure events.
- Refactored Settings.xaml and Settings.xaml.cs for better tab management and UI responsiveness.
- Added OrchestrationFailed event in Orchestrator for better orchestration error handling.

--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Converters\AutoRetryActiveToSymbolConverter.cs" />
     <Compile Include="Converters\BooleanToInvertedVisibilityConverter.cs" />
     <Compile Include="Converters\HideFileOrchestrationSourceConverter.cs" />
+    <Compile Include="Converters\CountToColorConverter.cs" />
     <Compile Include="Converters\NullToVisibilityConverter.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\BooleanToSymbolConverter.cs" />
@@ -160,6 +161,7 @@
       <DependentUpon>Examples.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\PageArguments\ActionPageArguments.cs" />
+    <Compile Include="Pages\PageArguments\SettingPageTabs.cs" />
     <Compile Include="Pages\PageArguments\SettingsPageArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\Settings.xaml.cs">
